--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,20 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
-    "baseUrl": "src",
+    "allowJs": true,  
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "skipLibCheck": true,
     "typeRoots": [
       "node_modules/@types"
     ],
+    "types": [],
     "lib": [
-      "es2016",
+      "es2017",
       "dom"
     ]
   }
