--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@observablehq/runtime": "^4.2.1",
     "core-js": "^2.4.1",
     "d3": "^5.9.5",
+    "d3-format": "^1.3.2",
+    "moment": "^2.24.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
